--- a/Login_Cadatro/CSS/codigo.css
+++ b/Login_Cadatro/CSS/codigo.css
@@ -64,9 +64,9 @@ body {
 .personagem-sombra {
     position: fixed;
     top: 90%;
-    left: 17%;
+    left: 14%;
     transform: translateY(-50%) rotate(9deg);
-    width: clamp(8vw, 12vw, 15vw);
+    width: clamp(8vw, 18vw, 20vw);
     height: clamp(50vh, 65vh, 75vh);
     background: linear-gradient(360deg, var(--cor-sombra-inicio), var(--cor-sombra-fim));
     border-radius: 30px;
